# x86Emulator

./: CMakeLists.txt  build.bat  build.sh
cmake/: Dependencies.cmake  ExternalProjects.cmake
include/: cdrom_drive.h  config_manager.h  device.h  device_manager.h  emulator.h  floppy_drive.h  graphics_adapter.h  hard_disk.h  interrupt_controller.h  io_manager.h  logger.h  memory_manager.h  network_adapter.h  sound_manager.h  storage_device.h  timer_manager.h
include/devices/: device.h  device_config.h  device_factory.h
include/devices/chipset/nforce/: nforce.h
include/devices/input/: joyport.h
include/devices/machine/: include_devices_machine_sis7018_audio.h  sis5513_ide.h  sis7001_usb.h
include/devices/pci/: pci_bus_factory.h
include/devices/sound/: ac97.h
include/devices/video/: include_devices_video_sis_vga.h
include/gui/: about_dialog.h  display_area.h  machine_dialog.h  main_window.h  settings_dialog.h  status_bar.h  toolbar.h
include/gui/settings_pages/: display_page.h  floppy_cdrom_page.h  input_page.h  machine_page.h  network_page.h  sound_page.h
include/machine/: bios_loader.h  machine_config.h  sis630_host.h
include/x86emulator/: emulation.h  network_handler.h  network_manager.h  pci_device.h
include/x86emulator/chipsets/: sis_630.h
include/x86emulator/gui/: vga_display_widget.h
include/x86emulator/network/: loopback_handler.h  rtl8139.h
include/x86emulator/pci/: rtl8139_pci.h
include/x86emulator/sound/: ac97_device.h
include/x86emulator/video/: geforce3.h  sis_630_vga.h
resources/: resources.qrc
scripts/: prepare_dependencies.sh
src/: CMakeLists.txt  cdrom_drive.cpp  config_manager.cpp  device.cpp  device_manager.cpp  emulator.cpp  floppy_drive.cpp  graphics_adapter.cpp  hard_disk.cpp  interrupt_controller.cpp  io_manager.cpp  logger.cpp  main.cpp  memory_manager.cpp  network_adapter.cpp  sound_manager.cpp  storage_device.cpp  timer_manager.cpp
src/chipset/: sis_630_chipset.cpp
src/core/: CMakeLists.txt  emulation_impl.cpp  network_manager.cpp
src/devices/: device_factory.cpp
src/devices/chipset/: nforce.cpp  nforce_agpbridge.cpp  nforce_cpubridge.cpp  nforce_ide.cpp  nforce_isabridge.cpp  nforce_memory.cpp  nforce_smbus.cpp
src/devices/cpu/i386/: x86_cpu.cpp  x86_cpu.h  x86_cpu_factory.cpp  x86_cpu_factory.h
src/devices/cpu/i386/86box/: 86box_integration.cpp  86box_integration.h  i386_adapter.cpp  i386_adapter.h
src/devices/cpu/i386/common/: i386_interface.h
src/devices/cpu/i386/mame/: i386_adapter.h
src/devices/machine/: sis5513_ide.cpp  sis630_host.cpp
src/devices/network/: CMakeLists.txt  loopback_handler.cpp  rtl8139.cpp
src/devices/pci/: CMakeLists.txt  pci_bus_factory.cpp  pci_device.cpp  rtl8139_pci.cpp
src/devices/sound/: ac97_device.cpp
src/devices/video/: sis_630_vga.cpp
src/gui/: about_dialog.cpp  display_area.cpp  machine_dialog.cpp  main_window.cpp  settings_dialog.cpp  status_bar.cpp  toolbar.cpp  vga_display_widget.cpp
src/gui/settings_pages/: display_page.cpp  input_page.cpp  machine_page.cpp  network_page.cpp  sound_page.cpp
src/machine/: bios_loader.cpp  machine_config.cpp
src/video/: geforce3.cpp
